Update landing page images and slider styling
Add new landing page images and adjust slider styling for better
presentation. Also, reorganize the order of images in the slider.

--- a/index.html
+++ b/index.html
@@ -56,21 +56,21 @@
     <!-- End Header -->
     <!-- Start Landing Section -->
     <div class="landing">
-      <!-- <div class="intro-text">
-        <img src="images/logo.png" alt="E-markets" class="logo" />
-        <h1>Welcome to E-Markets</h1>
-        <p>Trade Safely and Easily</p>
-      </div> -->
       <div class="slider">
         <div class="slides">
-          <img src="images/ship.jpg" class="slide active" />
-          <img src="images/01.webp" class="slide" />
-          <img src="images/02.webp" class="slide" />
-          <img src="images/03.webp" class="slide" />
+          <img src="images/landing3.jpg" class="slide active" />
+          <img src="images/landing4.jpg" class="slide" />
+          <img src="images/landing1.jpg" class="slide" />
+          <img src="images/ship.jpg" class="slide" />
           <!-- Add more images as needed -->
         </div>
         <button class="btn prev" onclick="moveSlide(-1)">&#10094;</button>
         <button class="btn next" onclick="moveSlide(1)">&#10095;</button>
+      </div>
+      <div class="intro-text">
+        <img src="images/logo.png" alt="E-markets" class="logo" />
+        <h1>Welcome to E-Markets</h1>
+        <p>Trade Safely and Easily</p>
       </div>
     </div>
     <!-- End Landing Section -->
