Update script loading to defer execution
Changed the script tag in index.html to include the 'defer' attribute for
improved page loading performance.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <link rel="icon" href="images/logo.png" type="image/x-icon" />
-    <script src="script/index.js"></script>
+    <script src="script/index.js" defer></script>
   </head>
   <body>
     <!-- Start Header -->
