Update font sizes and colors in leon.css and index.html
Adjust font sizes and colors for better readability and consistency in leon.css.
Update social media links in index.html to open in new tabs for better user experience.

--- a/index.html
+++ b/index.html
@@ -287,23 +287,46 @@
           >
           <div class="contacts">
             <p>Find us on social networks:</p>
-            <a class="social" href="https://www.facebook.com/EMarkets.Eg">
+            <a
+              class="social"
+              href="https://www.facebook.com/EMarkets.Eg"
+              target="_blank"
+            >
               <i class="fa-brands fa-facebook"></i>
             </a>
-            <a class="social" href="http://linkedin.com/company/emarkets-eg">
+            <a
+              class="social"
+              href="http://linkedin.com/company/emarkets-eg"
+              target="_blank"
+            >
               <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a class="social" href="http://twitter.com/emarkets_eg">
+            <a
+              class="social"
+              href="http://twitter.com/emarkets_eg"
+              target="_blank"
+            >
               <i class="fa-brands fa-twitter"></i>
             </a>
-            <a class="social" href="https://www.instagram.com/emarkets_eg">
+            <a
+              class="social"
+              href="https://www.instagram.com/emarkets_eg"
+              target="_blank"
+            >
               <i class="fa-brands fa-instagram"></i>
             </a>
-            <a class="social" href="https://www.youtube.com/@E-Markets-eg">
+            <a
+              class="social"
+              href="https://www.youtube.com/@E-Markets-eg"
+              target="_blank"
+            >
               <i class="fa-brands fa-youtube"></i>
             </a>
           </div>
-          <a class="address" href="https://maps.app.goo.gl/5Ck5bi9nKmUcmWEj6"
+          <a
+            class="address"
+            href="https://maps.app.goo.gl/5Ck5bi9nKmUcmWEj6"
+            target="_blank"
             ><i class="fa-solid fa-map-marker-alt"></i> 45 Qambiz st, infront of
             shooting club gate -Dokki- Giza, Egypt
           </a>
