Update CSS styles for portfolio projects and fix HTML structure in index.html
Added transition effect and border-radius to portfolio project columns in CSS.
Fixed HTML structure in index.html by removing unnecessary anchor tags and adjusting div placement for project columns.

--- a/index.html
+++ b/index.html
@@ -206,44 +206,31 @@
         <h2 class="special-headings">Download</h2>
         <p>Use E-Markets across your devices.</p>
         <div class="projects">
-          <a
-            href="https://play.google.com/store/apps/details?id=com.emarkets.emarket_main"
-            target="_blank"
-          >
-            <div class="col">
-              <img src="images/mobile.jpg" alt="Android" />
-              <div class="texts">
-                <h3>Android</h3>
-                <p>
-                  Minimum Requirements (Version 1.2.3) Android OS 5.0 and up.
-                </p>
-              </div>
+          <div class="col">
+            <img src="images/mobile.jpg" alt="Android" />
+            <div class="texts">
+              <h3>Android</h3>
+              <p>Minimum Requirements (Version 1.2.3) Android OS 5.0 and up.</p>
             </div>
-          </a>
-          <a
-            href="https://github.com/E-Markets/emarket-versions/releases/download/windows1.2.3/emarkets1.2.3.exe"
-            target="_blank"
-          >
-            <div class="col">
-              <img src="images/windows.jpg" alt="Windwos" />
-              <div class="texts">
-                <h3>Windows</h3>
-                <p>Requires Windows 10 or newer.</p>
-              </div>
+          </div>
+
+          <div class="col">
+            <img src="images/windows.jpg" alt="Windwos" />
+            <div class="texts">
+              <h3>Windows</h3>
+              <p>Requires Windows 10 or newer.</p>
             </div>
-          </a>
-          <a href="https://e-markets.github.io/emarkets-web/" target="_blank">
-            <div class="col">
-              <img src="images/web.jpg" alt="project3" />
-              <div class="texts">
-                <h3>E-Markets Web</h3>
-                <p>
-                  Don't see your device supported? Use E-Markets on your
-                  browser.
-                </p>
-              </div>
+          </div>
+
+          <div class="col">
+            <img src="images/web.jpg" alt="project3" />
+            <div class="texts">
+              <h3>E-Markets Web</h3>
+              <p>
+                Don't see your device supported? Use E-Markets on your browser.
+              </p>
             </div>
-          </a>
+          </div>
         </div>
       </div>
     </div>
