Add responsive styling for project images and buttons
Added responsive styling for project images and buttons to ensure proper
display on smaller screens. Also adjusted button positions for better
alignment.

--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
               <h3>Android</h3>
               <p>Minimum Requirements (Version 1.2.3) Android OS 5.0 and up.</p>
             </div>
+            <button type="button">Download</button>
           </div>
 
           <div class="col">
@@ -220,16 +221,20 @@
               <h3>Windows</h3>
               <p>Requires Windows 10 or newer.</p>
             </div>
+            <button type="button">Download</button>
           </div>
 
           <div class="col">
-            <img src="images/web.jpg" alt="project3" />
+            <div class="imagesizer">
+              <img src="images/web.jpg" alt="project3" />
+            </div>
             <div class="texts">
               <h3>E-Markets Web</h3>
               <p>
                 Don't see your device supported? Use E-Markets on your browser.
               </p>
             </div>
+            <button type="button">Visit</button>
           </div>
         </div>
       </div>
