--- a/index.html
+++ b/index.html
@@ -212,7 +212,12 @@
               <h3>Android</h3>
               <p>Minimum Requirements (Version 1.2.3) Android OS 5.0 and up.</p>
             </div>
-            <button type="button">Download</button>
+            <a
+              href="https://play.google.com/store/apps/details?id=com.emarkets.emarket_main"
+              target="_blank"
+            >
+              <button type="button">Download</button>
+            </a>
           </div>
 
           <div class="col">
@@ -221,7 +226,12 @@
               <h3>Windows</h3>
               <p>Requires Windows 10 or newer.</p>
             </div>
-            <button type="button">Download</button>
+            <a
+              href="https://github.com/E-Markets/emarket-versions/releases/download/windows1.2.3/emarkets1.2.3.exe"
+              target="_blank"
+            >
+              <button type="button">Download</button>
+            </a>
           </div>
 
           <div class="col">
@@ -234,7 +244,9 @@
                 Don't see your device supported? Use E-Markets on your browser.
               </p>
             </div>
-            <button type="button">Visit</button>
+            <a href="https://e-markets.github.io/emarkets-web/" target="_blank">
+              <button type="button">Visit</button>
+            </a>
           </div>
         </div>
       </div>
