Add hover effect to 'i' elements and images in services section
Added transition and hover effect to 'i' elements and images in the services
section for better user interaction and visual appeal. Also adjusted the
styling of the graph elements for responsiveness.

--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
             </div>
           </div>
           <div class="col">
-            <div class="graph"></div>
+            <div class="graph">
+              <img src="../images/app.jpg" alt="" />
+            </div>
           </div>
         </div>
       </div>
