Add Ramadan section to header
Added a new section in the header for Ramadan with an image and styling adjustments.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <!-- Start Header -->
     <div class="header">
       <div class="container">
+        <div class="ramadan">
+          <img src="images/ramadan.png" alt="Ramadan" />
+        </div>
         <a href="https://e-markets.org/"
           ><img src="images/logo.png" alt="E-markets" class="logo"
         /></a>
