Update landing page image format to WebP and updated some images sizes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="landing">
       <div class="slider">
         <div class="slides">
-          <img src="images/landing3.jpg" class="slide active" />
+          <img src="images/landing3.webp" class="slide active" />
           <img src="images/landing4.jpg" class="slide" />
           <img src="images/landing1.jpg" class="slide" />
           <img src="images/ship.jpg" class="slide" />
