Update image file formats to webp for better performance
Replace all image files with webp format for improved website performance
and loading speed. This change includes updating references in the HTML
file to use the new webp images.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="images/logo.png" type="image/x-icon" />
+    <link rel="icon" href="images/logo.webp" type="image/x-icon" />
     <script src="script/index.js" defer></script>
   </head>
   <body>
@@ -26,10 +26,10 @@
     <div class="header">
       <div class="container">
         <div class="ramadan">
-          <img src="images/ramadan.png" alt="Ramadan" />
+          <img src="images/ramadan.webp" alt="Ramadan" />
         </div>
         <a href="https://e-markets.org/"
-          ><img src="images/logo.png" alt="E-markets" class="logo"
+          ><img src="images/logo.webp" alt="E-markets" class="logo"
         /></a>
         <div class="header-links">
           <p><a href="#about">About</a></p>
@@ -62,16 +62,16 @@
       <div class="slider">
         <div class="slides">
           <img src="images/landing3.webp" class="slide active" />
-          <img src="images/landing4.jpg" class="slide" />
-          <img src="images/landing1.jpg" class="slide" />
-          <img src="images/ship.jpg" class="slide" />
+          <img src="images/landing4.webp" class="slide" />
+          <img src="images/landing1.webp" class="slide" />
+          <img src="images/ship.webp" class="slide" />
           <!-- Add more images as needed -->
         </div>
         <button class="btn prev" onclick="moveSlide(-1)">&#10094;</button>
         <button class="btn next" onclick="moveSlide(1)">&#10095;</button>
       </div>
       <div class="intro-text">
-        <img src="images/logo.png" alt="E-markets" class="logo" />
+        <img src="images/logo.webp" alt="E-markets" class="logo" />
         <h1>Welcome to E-Markets</h1>
         <p>Trade Safely and Easily</p>
       </div>
@@ -124,7 +124,7 @@
         <p>Just a click away, and see the world by eyes of Experts</p>
         <div class="content">
           <div class="shapes">
-            <img src="images/cloud.jpg" alt="database" />
+            <img src="images/cloud.webp" alt="database" />
           </div>
           <div class="texts">
             <p>
@@ -198,7 +198,7 @@
           </div>
           <div class="col">
             <div class="graph">
-              <img src="../images/app.jpg" alt="" />
+              <img src="../images/app.webp" alt="" />
             </div>
           </div>
         </div>
@@ -212,7 +212,7 @@
         <p>Use E-Markets across your devices.</p>
         <div class="projects">
           <div class="col">
-            <img src="images/mobile.jpg" alt="Android" />
+            <img src="images/mobile.webp" alt="Android" />
             <div class="texts">
               <h3>Android</h3>
               <p>Minimum Requirements (Version 1.2.3) Android OS 5.0 and up.</p>
@@ -226,7 +226,7 @@
           </div>
 
           <div class="col">
-            <img src="images/windows.jpg" alt="Windwos" />
+            <img src="images/windows.webp" alt="Windwos" />
             <div class="texts">
               <h3>Windows</h3>
               <p>Requires Windows 10 or newer.</p>
@@ -241,7 +241,7 @@
 
           <div class="col">
             <div class="imagesizer">
-              <img src="images/web.jpg" alt="project3" />
+              <img src="images/web.webp" alt="project3" />
             </div>
             <div class="texts">
               <h3>E-Markets Web</h3>
@@ -274,7 +274,7 @@
             </p>
           </div>
           <div class="shapes">
-            <img src="images/ai.jpg" alt="plant" />
+            <img src="images/ai.webp" alt="plant" />
           </div>
         </div>
       </div>
