--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           <p><a href="#application">Our Application</a></p>
           <p><a href="#download">Download</a></p>
           <p><a href="#tools">Marketing tools</a></p>
+          <p><a href="#pricing">Pricing</a></p>
           <p><a href="#contact">Contact</a></p>
         </div>
         <div class="links">
@@ -51,6 +52,7 @@
             <li><a href="#application">Our Application</a></li>
             <li><a href="#download">Download</a></li>
             <li><a href="#tools">Marketing tools</a></li>
+            <li><a href="#pricing">Pricing</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
@@ -205,7 +207,7 @@
       </div>
     </div>
     <!-- End Services -->
-    <!-- Start Portfolio -->
+    <!-- Start Download -->
     <div class="portfolio" id="download">
       <div class="container">
         <h2 class="special-headings">Download</h2>
@@ -256,7 +258,7 @@
         </div>
       </div>
     </div>
-    <!-- End Portfolio -->
+    <!-- End Download -->
     <!-- Start About Section -->
     <div class="about" id="tools">
       <div class="container">
@@ -280,6 +282,80 @@
       </div>
     </div>
     <!-- End About Section -->
+    <!-- Start Pricing -->
+    <div class="pricing" id="pricing">
+      <div class="container">
+        <h2 class="special-headings">Pricing</h2>
+        <p>Select one of our Subscription Plans.</p>
+        <div class="projects">
+          <div class="col">
+            <!-- <img src="images/mobile.webp" alt="Android" /> -->
+            <div class="texts">
+              <h3>Free</h3>
+              <p>
+                Visibility in Database : Your user data will be showcased in our
+                database, allowing other importers to discover, contact, and
+                potentially engage in trade with you. This enhanced visibility
+                increases your opportunities to expand your network and
+                facilitate import transactions.
+              </p>
+            </div>
+            <a
+              href="https://play.google.com/store/apps/details?id=com.emarkets.emarket_main"
+              target="_blank"
+            >
+              <button type="button">Get started free</button>
+            </a>
+          </div>
+
+          <div class="col">
+            <!-- <img src="images/windows.webp" alt="Windwos" /> -->
+            <div class="texts">
+              <h3>Basic</h3>
+              <p>
+                Everything in Basic, and: Export Opportunities Access : Gain
+                access to our "Export Opportunities" service, where you can both
+                add your own export opportunities and explore opportunities
+                posted by importers. This feature empowers you to actively seek
+                and engage with potential import partners, enhancing your
+                business growth and trade prospects.
+              </p>
+            </div>
+            <a
+              href="https://github.com/E-Markets/emarket-versions/releases/download/windows1.2.3/emarkets1.2.3.exe"
+              target="_blank"
+            >
+              <button type="button">Contact sales</button>
+            </a>
+          </div>
+
+          <div class="col">
+            <div class="imagesizer">
+              <!-- <img src="images/web.webp" alt="project3" /> -->
+            </div>
+            <div class="texts">
+              <h3>Pro</h3>
+              <p>
+                Everything in Plus, and: Full Database Access for Your Products
+                : Enjoy full access to our comprehensive database, including:
+                Target market countries for your products Importers from each
+                target market country Importers from other countries outside
+                your target market Market analysis, including Competitive
+                analysis, PESTLE Analysis, and SWOT Analysis Marketing plan,
+                including 4Ps Analysis This feature-rich package provides you
+                with extensive resources and insights to optimize your export
+                strategy, identify market opportunities, and make informed
+                business decisions.
+              </p>
+            </div>
+            <a href="https://e-markets.github.io/emarkets-web/" target="_blank">
+              <button type="button">Contact sales</button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Pricing -->
     <!-- Start Contact Section -->
     <div class="contact" id="contact">
       <div class="container">
