Add pricing section styles
Added styles for the pricing section in CSS file and updated class name in HTML file.

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       <div class="container">
         <h2 class="special-headings">Pricing</h2>
         <p>Select one of our Subscription Plans.</p>
-        <div class="projects">
+        <div class="plans">
           <div class="col">
             <!-- <img src="images/mobile.webp" alt="Android" /> -->
             <div class="texts">
