Update CSS styles and HTML content
Added new CSS variables for shadow and grey colors, updated box-shadow properties
to use these variables. Updated HTML content for pricing plans to improve readability
and formatting. Fixed broken anchor links in index.html.

--- a/index.html
+++ b/index.html
@@ -293,17 +293,14 @@
             <div class="texts">
               <h3>Free</h3>
               <p>
-                Visibility in Database : Your user data will be showcased in our
-                database, allowing other importers to discover, contact, and
-                potentially engage in trade with you. This enhanced visibility
-                increases your opportunities to expand your network and
-                facilitate import transactions.
+                Visibility in Database : <br /><br />Your user data will be
+                showcased in our database, allowing other importers to discover,
+                contact, and potentially engage in trade with you. This enhanced
+                visibility increases your opportunities to expand your network
+                and facilitate import transactions.
               </p>
             </div>
-            <a
-              href="https://play.google.com/store/apps/details?id=com.emarkets.emarket_main"
-              target="_blank"
-            >
+            <a href="#download">
               <button type="button">Get started free</button>
             </a>
           </div>
@@ -313,18 +310,15 @@
             <div class="texts">
               <h3>Basic</h3>
               <p>
-                Everything in Basic, and: Export Opportunities Access : Gain
-                access to our "Export Opportunities" service, where you can both
-                add your own export opportunities and explore opportunities
-                posted by importers. This feature empowers you to actively seek
-                and engage with potential import partners, enhancing your
-                business growth and trade prospects.
+                Everything in Basic, and: <br /><br />Export Opportunities
+                Access : Gain access to our "Export Opportunities" service,
+                where you can both add your own export opportunities and explore
+                opportunities posted by importers. This feature empowers you to
+                actively seek and engage with potential import partners,
+                enhancing your business growth and trade prospects.
               </p>
             </div>
-            <a
-              href="https://github.com/E-Markets/emarket-versions/releases/download/windows1.2.3/emarkets1.2.3.exe"
-              target="_blank"
-            >
+            <a href="#contact">
               <button type="button">Contact sales</button>
             </a>
           </div>
@@ -336,19 +330,19 @@
             <div class="texts">
               <h3>Pro</h3>
               <p>
-                Everything in Plus, and: Full Database Access for Your Products
-                : Enjoy full access to our comprehensive database, including:
-                Target market countries for your products Importers from each
-                target market country Importers from other countries outside
-                your target market Market analysis, including Competitive
-                analysis, PESTLE Analysis, and SWOT Analysis Marketing plan,
-                including 4Ps Analysis This feature-rich package provides you
-                with extensive resources and insights to optimize your export
-                strategy, identify market opportunities, and make informed
-                business decisions.
+                Everything in Plus, and: <br /><br />Full Database Access for
+                Your Products : Enjoy full access to our comprehensive database,
+                including: Target market countries for your products Importers
+                from each target market country Importers from other countries
+                outside your target market Market analysis, including
+                Competitive analysis, PESTLE Analysis, and SWOT Analysis
+                Marketing plan, including 4Ps Analysis This feature-rich package
+                provides you with extensive resources and insights to optimize
+                your export strategy, identify market opportunities, and make
+                informed business decisions.
               </p>
             </div>
-            <a href="https://e-markets.github.io/emarkets-web/" target="_blank">
+            <a href="#contact">
               <button type="button">Contact sales</button>
             </a>
           </div>
