Update headings in index.html
Change headings from "Free" to "Basic" and from "Basic" to "Plus" for better clarity and consistency in the services offered.

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
           <div class="col">
             <!-- <img src="images/mobile.webp" alt="Android" /> -->
             <div class="texts">
-              <h3>Free</h3>
+              <h3>Basic</h3>
               <p>
                 Visibility in Database : <br /><br />Your user data will be
                 showcased in our database, allowing other importers to discover,
@@ -308,7 +308,7 @@
           <div class="col">
             <!-- <img src="images/windows.webp" alt="Windwos" /> -->
             <div class="texts">
-              <h3>Basic</h3>
+              <h3>Plus</h3>
               <p>
                 Everything in Basic, and: <br /><br />Export Opportunities
                 Access : Gain access to our "Export Opportunities" service,
