Comment out Ramadan section in CSS and HTML
Comment out the Ramadan section in the CSS and HTML files to temporarily
remove it from the display. This change is made to address a styling issue
related to the Ramadan section.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <!-- Start Header -->
     <div class="header">
       <div class="container">
-        <div class="ramadan">
+        <!-- <div class="ramadan">
           <img src="images/ramadan.webp" alt="Ramadan" />
-        </div>
+        </div> -->
         <a href="https://e-markets.org/"
           ><img src="images/logo.webp" alt="E-markets" class="logo"
         /></a>
