Update store link styles and add new store link in index.html
Added new styles for the store link in the header and included a new store link in the index.html file for Egypt.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,17 @@
           <p><a href="#database">E-Markets Database</a></p>
           <p><a href="#application">Our Application</a></p>
           <p><a href="#download">Download</a></p>
-          <p><a href="#tools">Marketing tools</a></p>
+          <!-- <p><a href="#tools">Marketing tools</a></p> -->
           <p><a href="#pricing">Pricing</a></p>
           <p><a href="#contact">Contact</a></p>
+          <p class="store-p">
+            <a href="">Store</a>
+          </p>
+          <ul class="store">
+            <li>
+              <a href="https://www.egypte-market.com/" target="_blank">Egypt</a>
+            </li>
+          </ul>
         </div>
         <div class="links">
           <span class="icon">
@@ -51,8 +59,16 @@
             <li><a href="#database">E-Markets Database</a></li>
             <li><a href="#application">Our Application</a></li>
             <li><a href="#download">Download</a></li>
-            <li><a href="#tools">Marketing tools</a></li>
+            <!-- <li><a href="#tools">Marketing tools</a></li> -->
             <li><a href="#pricing">Pricing</a></li>
+            <li>
+              <a
+                class="store"
+                href="https://www.egypte-market.com/"
+                target="_blank"
+                >Store</a
+              >
+            </li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
@@ -120,7 +136,7 @@
     </div>
     <!-- End Features Section -->
     <!-- Start Database Section -->
-    <div class="about" id="database">
+    <!-- <div class="about" id="database">
       <div class="container">
         <h2 class="special-headings">E-Markets Database</h2>
         <p>Just a click away, and see the world by eyes of Experts</p>
@@ -133,13 +149,11 @@
               The premier and most extensive commercial database designed to
               assist Egyptian suppliers in exporting their products.
             </p>
-            <p>
-              <!-- You may add some text here -->
-            </p>
+            <p></p>
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- End Database Section -->
     <!-- Start Services -->
     <div class="services" id="application">
@@ -217,7 +231,7 @@
             <img src="images/mobile.webp" alt="Android" />
             <div class="texts">
               <h3>Android</h3>
-              <p>Minimum Requirements (Version 1.2.4) Android OS 5.0 and up.</p>
+              <p>Minimum Requirements (Version 1.2.6) Android OS 5.0 and up.</p>
             </div>
             <a
               href="https://play.google.com/store/apps/details?id=com.emarkets.emarket_main"
@@ -234,7 +248,7 @@
               <p>Requires Windows 10 or newer.</p>
             </div>
             <a
-              href="https://github.com/E-Markets/emarket-versions/releases/download/windows1.2.4/emarkets1.2.4.exe"
+              href="https://github.com/E-Markets/emarket-versions/releases/download/windows1.2.6/emarkets1.2.6.exe"
               target="_blank"
             >
               <button type="button">Download</button>
