--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <li><a href="#pricing">Pricing</a></li>
             <li>
               <a
-                class="store"
+                class="store-item"
                 href="https://www.egypte-market.com/"
                 target="_blank"
                 >Store</a
